# RubiksCubeSolver

./: BFS.h  CMakeLists.txt  Cube3d.cpp  Cube3d.h  DFS.h  GenCube.cpp  GenCube.h  IDAstarSolver.h  IDDFS.h  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
